# redesigned-carnival

./: .gitignore  CMakeLists.txt  README.md
resources/shaders/: basic.shader
resources/textures/: the_cherno_logo.png:Zone.Identifier
src/: CMakeLists.txt  application.cpp  glerrorlogging.cpp  glerrorlogging.h  indexbuffer.cpp  indexbuffer.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertexarray.cpp  vertexarray.h  vertexbuffer.cpp  vertexbuffer.h  vertexbufferlayout.h
